# Proyecto-Neumonia

./: .gitignore  Dockerfile  README.md  detector_neumonia.py  historial_pacientes.csv  main.py  pyproject.toml  requirements.txt
image/: preprocess_img.py  preprocessor.py  read_img.py  reader.py
model/: grad_cam.py  gradcam.py  load_model.py  model_loader.py  predictor.py  predictor_img.py
services/: history_service.py  report_service.py
src/: integrator.py
src/data/: preprocess_img.py  read_img.py
src/models/: load_model.py
src/visualizations/: grad_cam.py
tests/: test_predictor.py  test_preprocessor.py  test_services.py
ui/: app.py  integrator.py
