[project]
name = "proyecto-neumonia"
version = "0.1.0"
description = "Instalación de dependencias registradas en requeriments.txt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "img2pdf",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "pyautogui",
    "pydicom",
    "python-xlib",
    "tensorflow==2.15.0",
    "tkcap",
]
