[project]
name = "proyecto-neumonia"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    "tensorflow==2.15.0",
    "numpy>=1.26.0",
    "pillow",
    "matplotlib",
    "opencv-python",
    "pydicom",
    "tkcap",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0"
]

[tool.uv]

required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
